force-app/main/default/objects/Bus__c/fields/Bus_Picture__c.field-meta.xml
<CustomField>
    <fullName>Bus_Picture__c</fullName>
    <formula>IMAGE( Bus_Image__c ,  Name ,25,25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bus Picture</label>
    <type>Text</type>
</CustomField>