force-app/main/default/objects/Bus__c/fields/Schedule_for_service__c.field-meta.xml
<CustomField>
    <fullName>Schedule_for_service__c</fullName>
    <formula>AND(ISPICKVAL(Maximum_Capacity__c, &apos;60&apos;),Odometer_Reading__c  -  Latest_odometer_reading_when_serviced__c &gt;= 5000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule for service</label>
    <type>Checkbox</type>
</CustomField>