force-app/main/default/objects/Bus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Current_Status__c</columns>
    <columns>Maximum_Capacity__c</columns>
    <columns>Latest_odometer_reading_when_serviced__c</columns>
    <columns>Resale_Value__c</columns>
    <columns>Air_conditioner__c</columns>
    <columns>Schedule_for_service__c</columns>
    <columns>Odometer_Reading__c</columns>
    <columns>Bus_Image__c</columns>
    <columns>Location__Longitude__s</columns>
    <columns>Location__Latitude__s</columns>
    <columns>Bus_Picture__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>